--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;/*
+    font-family: 'Roboto', sans-serif;
+    font-family: 'Architects Daughter', cursive;
+    font-family: 'Pangolin', cursive;
+    font-family: 'Permanent Marker', cursive;
+    font-family: 'The Girl Next Door', cursive;
+    font-family: 'Over the Rainbow', cursive;*/
+    font-family: 'Give You Glory', cursive;
 }
